docs: document signin
